force-app/main/default/objects/Integration_Log__c/fields/Endpoint_Type__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Type__c</fullName>
    <label>Endpoint Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Create-Manually</fullName>
            </value>
            <value>
                <fullName>Create-Timer</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>