force-app/main/default/objects/Integration_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>What integration is this log from?</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Clockify-API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>