force-app/main/default/objects/Integration_Log__c/listViews/Clockify_Logs.listView-meta.xml
<ListView>
    <fullName>Clockify_Logs</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Endpoint_Type__c</columns>
    <columns>Result__c</columns>
    <columns>Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Clockify-API</value>
    </filters>
    <label>Clockify Logs</label>
</ListView>